packages/client/src/pages/PortalSettings/categories/common/DefaultTemplates/DefaultTemplates.module.scss
// (c) Copyright Ascensio System SIA 2009-2026
//
// This program is a free software product.
// You can redistribute it and/or modify it under the terms
// of the GNU Affero General Public License (AGPL) version 3 as published by the Free Software
// Foundation. In accordance with Section 7(a) of the GNU AGPL its Section 15 shall be amended
// to the effect that Ascensio System SIA expressly excludes the warranty of non-infringement of
// any third-party rights.
//
// This program is distributed WITHOUT ANY WARRANTY, without even the implied warranty
// of MERCHANTABILITY or FITNESS FOR A PARTICULAR  PURPOSE. For details, see
// the GNU AGPL at: http://www.gnu.org/licenses/agpl-3.0.html
//
// You can contact Ascensio System SIA at Lubanas st. 125a-25, Riga, Latvia, EU, LV-1021.
//
// The  interactive user interfaces in modified source and object code versions of the Program must
// display Appropriate Legal Notices, as required under Section 5 of the GNU AGPL version 3.
//
// Pursuant to Section 7(b) of the License you must retain the original Product logo when
// distributing the program. Pursuant to Section 7(e) we decline to grant you any rights under
// trademark law for use of our trademarks.
//
// All the Product's GUI elements, including illustrations and icon sets, as well as technical writing
// content are licensed under the terms of the Creative Commons Attribution-ShareAlike 4.0
// International. See the License terms at http://creativecommons.org/licenses/by-sa/4.0/legalcode

@use "@docspace/shared/styles/mixins";

.wrapper {
  width: 100%;
  max-width: 700px;
}

.description {
  margin-bottom: 20px;
}

.rowContainer {
  display: flex;
  flex-direction: column;
  border: 1px solid var(--default-templates-border-color);
  border-radius: 6px;
  padding: 0 16px;
}

.templateRow {
  width: 100%;
  display: flex;
  align-items: center;
  border-bottom: 1px solid var(--default-templates-border-color);

  &:last-child {
    border-bottom: none;
  }
}

.rowContent {
  display: flex;
  flex-direction: row;
  flex: 1;
  align-items: center;
  padding: 12px 0;
}

.mainContent {
  display: flex;
  flex-direction: column;

  @include mixins.mobile {
    max-width: 120px;
  }
}

.icon {
  width: 32px;
  height: 32px;
  margin-inline-end: 12px;
}

.badge {
  margin-inline-start: auto;
  margin-inline-end: 24px;
}

.contextMenuButton {
  margin-inline-start: auto;
}

.modifiedText {
  color: var(--modified-text-color);
}

